networkPolicy/default-deny/default-deny-allow-dns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
      ports: 
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
