networkPolicy/default-deny/default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
